Fix whitespace on mobile services

--- a/components/services/services.sass
+++ b/components/services/services.sass
@@ -33,7 +33,7 @@
   flex-wrap: nowrap
   align-items: flex-start
   height: 3rem
-  margin: 1rem auto
+  margin-bottom: 2rem
 
   .box
     width: 10rem
@@ -120,7 +120,7 @@
   margin-bottom: 1rem
 
 .content__description
-  margin-bottom: 1rem
+  margin-bottom: 2rem
   max-width: 50%
   text-align: center
   line-height: 1.3rem
@@ -141,6 +141,8 @@
     width: 33%
   .content__description
     max-width: 65%
+  .content__image
+    max-height: 35rem
 
 +media($tablet-portrait)
   .services__header
